recursion.logo.spiral.Spiral.scala.error
Compilation error:
Spiral:2: error: '(' expected but identifier found.
  if steps ==0{
     ^Spiral:9: error: illegal start of simple expression
} 
^